@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2024-04-28T08:17:16Z",
+  "timestamp" : "2024-04-29T16:16:24Z",
   "count_outdated" : 79,
   "uniques_outdated" : 62,
-  "count" : 81,
-  "uniques" : 63,
+  "count" : 82,
+  "uniques" : 64,
   "clones" : [
     {
       "timestamp": "2024-04-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
